k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-profile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-profile
  template:
    metadata:
      labels:
        app: company-profile
    spec:
      containers:
        - name: company-profile
          image: 10.252.10.21:5000/company-profile:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: nexuss-creds
