k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-profile-service
spec:
  selector:
    app: company-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
